# ai-trader-expansion

./: .coverage  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
ai_trader_expansion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: __init__.py  auto_trader_production.json  paper_20man.json  settings.py
docs/: ADVANCED_STRATEGY_RESEARCH.md  ARCHITECTURE.mmd  BACKTEST_REPORT_2026-04-14.md  LLM_TRADING_RESEARCH_2026-04-14.md  MANUAL.md  OPERATIONS_GUIDE.md  PAPER_TEST_6M_REPORT.md  ROADMAP_V2.md  SPEC.md  STRATEGY_UPGRADE_RESEARCH.md  TEST_CHECKLIST.md  TEST_LIST.md  V2_IMPLEMENTATION_REPORT.md  backtest_results.json  optimization_results.json  paper_test_6m_full.json  paper_test_trades.json
scripts/: auto_trader.py  benchmark_all.py  create_shortcut.py  import_email_reports.py  optimize.py  watchdog.py
src/: __init__.py
src/advisors/: __init__.py  llm_advisor.py
src/api/: __init__.py  server.py
src/brokers/: __init__.py  base.py  broker_factory.py  (+3 more)
tests/: conftest.py  test_api.py  test_auto_trader.py  test_benchmark.py  test_brokers.py  test_coverage_boost.py  test_data_clients.py  test_data_manager_v2.py  test_defi.py  test_drift_and_ab.py  test_evaluation.py  test_import_email_reports.py  test_instrument.py  test_jquants_v2.py  test_kronos_forecaster.py  test_llm_advisor.py  test_new_strategies.py  test_notifications.py  test_oms.py  test_optimization.py  test_phase1_broker_eval.py  test_portfolio_risk.py  test_position_sizer.py  test_self_improver.py  test_strategies.py  test_trade_journal.py  test_ws_feed.py
(+48 files in other folders)
